{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 79,
  "lineage": "577bbf59-6252-458a-38dc-be5427857365",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC",
            "internal_domain_name_suffix": "353xebywxuqepmospodxkadgwa.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
                "subnet_id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "myNIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "myResourceGroup"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC|/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "network_interface_id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC",
            "network_security_group_id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myNSG"
          },
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "location": "eastus",
            "name": "myNSG",
            "resource_group_name": "myResourceGroup",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myNSG/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "myNSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "myResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "443",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myNSG/securityRules/AllowHTTPS",
            "name": "AllowHTTPS",
            "network_security_group_name": "myNSG",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "myResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myNSG/securityRules/AllowHTTP",
            "name": "AllowHTTP",
            "network_security_group_name": "myNSG",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "myResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "8080",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myNSG/securityRules/Allow8080",
            "name": "Allow8080",
            "network_security_group_name": "myNSG",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "myResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "myPublicIP",
            "resource_group_name": "myResourceGroup",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet",
            "name": "mySubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myResourceGroup",
            "virtual_network_name": "myVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0772fbef-bd16-4720-b1d2-7b87750066b0",
            "id": "/subscriptions/8a05877f-9446-4bb0-9c31-75bcfe060a89/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet",
            "location": "eastus",
            "name": "myVnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "myResourceGroup"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}